--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -232,7 +232,7 @@ main {
 }
 
 .h__toast {
-  @apply  dark:bg-secondary dark:text-bodyText;
+  @apply  dark:bg-secondary dark:text-borderColor;
   box-shadow: 0px 10px 36px rgba(15, 15, 16, 0.2) !important;
   background: white !important;
   color: black !important;
@@ -245,7 +245,6 @@ main {
 
 .Vue-Toastification__toast-body {
   padding: 1.5rem 1rem;
-  font-family: var(--h2-font-family);
 }
 
 .Vue-Toastification__progress-bar {
@@ -290,4 +289,32 @@ main {
       padding: 1.5rem 12px !important;
       font-size: var(--h7-font-size) !important;
   }
+}
+//Table
+table{
+  width: 100%;
+}
+.table-striped tr td,.table-outer table tr td{
+  box-shadow:none !important;
+  border:none !important;
+  padding:1rem;
+}
+
+.table-outer table{
+  box-shadow:none;
+  border:none;
+}
+
+.table-striped tr td:first-child,.table-outer table tr td:first-child{
+  border-left:1px solid var(--border-color) !important;
+  width:250px;
+}
+.table-striped tr td:nth-child(2),.table-outer table tr td:nth-child(2){
+  padding-right:2rem;
+}
+
+.table-striped tbody tr:nth-child(odd)>*,.table-outer table tbody tr:nth-child(odd)>*{
+  background:var(--color-light-secondary) !important;
+  box-shadow:none;
+  border:none;
 }
