--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,13 +27,30 @@
   --color-muted: #959595;
   --border-light-color: #eaf6ff;
   --border-color: #e8e8e8;
+  --color-card: #fff;
   // --yellow-light-color: rgba(255, 241, 204, 1);
   // --border-light-color: rgba(245, 245, 245, 1);
   // --red-color: rgba(255, 78, 78, 1);
   // --red-light-color: rgba(255, 220, 220, 1);
   // --lighter-color: rgba(250, 250, 250, 1);
 }
+html.dark {
+  --body-bg-color: #121212;
+  --body-text-color: #dadbe0;
+  --border-color: rgb(51, 51, 51);
+  --color-card: #0c0b0b;
+  --color-secondary: #2a2626;
+  --color-darker-secondary: #161414;
+  --color-light-secondary: rgb(48, 44, 44);
 
+  --color-primary: #b92e2e;
+  --color-darker-primary: #852020;
+  --color-light-primary: #c58b81;
+
+  img{
+    filter: brightness(.9);
+  }
+}
 @font-face {
   font-family: "Kalame";
   src: url(/fonts/Kalameh/KalamehWebFaNum-Regular.woff2);
@@ -53,16 +70,25 @@
   font-display: swap;
 }
 
+
+
 body {
-  @apply  text-h6;
+  @apply text-h6;
   color: var(--body-text-color);
   font-family: "Kalame";
   background: var(--body-bg-color);
   text-align: right;
 }
-html,body{
+
+html {
+  scroll-behavior: smooth;
+}
+
+html,
+body {
   overflow-x: hidden;
 }
+
 * {
   outline: none;
   box-shadow: none;
@@ -411,7 +437,7 @@ a:hover .dots-vertical-dots:nth-child(3) {
   border: none;
   border-radius: var(--border-radius);
   padding: 1.5rem 2rem;
-  @apply bg-white sm:px-3 py-4;
+  @apply bg-cardBg sm:px-3 py-4;
 
   .header {
     @apply flex gap-3 pb-2 justify-between border-b border-borderColor;
@@ -474,7 +500,7 @@ input {
   padding: .8rem 1rem;
 }
 
-input:not(.form-check-input):focus {
+input[type='checkbox']:not(.form-check-input):focus {
   @apply border-b-lightSecondary
 }
 
@@ -486,6 +512,7 @@ input:not(.form-check-input):focus {
 .input-icon input {
   padding-right: calc(24px + 1.5rem);
 }
+
 .dashboard-page main {
   padding-bottom: 100px !important;
 }
@@ -529,6 +556,7 @@ button {
 label {
   display: block;
 }
+
 @media screen and (min-width: 1025px) {
   .mobile-tabs {
     display: none;
@@ -560,37 +588,6 @@ label {
     justify-content: center !important;
   }
 
-  .dashboard-page table {
-    display: block;
-  }
-
-  .dashboard-page thead {
-    display: none;
-  }
-
-  .dashboard-page tr {
-    display: block;
-    width: 100%;
-  }
-
-  .dashboard-page tbody {
-    width: 100%;
-    display: block;
-  }
-
-  .dashboard-page tbody tr td,
-  .dashboard-page tbody tr td:last-child,
-  .dashboard-page .table-responsive tbody tr td:last-child {
-    display: flex;
-    align-items: center;
-    border-top: none !important;
-    border-right: none !important;
-    border-left: none !important;
-    border-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
-    justify-content: space-between;
-    border-bottom: 1px solid var(--border-color);
-  }
 
   .product-horizontal-body {
     position: relative;
