fix base Project

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -81,12 +81,13 @@ body {
 }
 @media screen and (min-width:1024px) {
   .container {
-      padding-left: 5rem;
-      padding-right: 5rem;
+      padding-left: 4rem;
+      padding-right: 4rem;
   }
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden
 }
 del{
   @apply text-muted;
