Add models for DiscountCode, ShopCartItem, and Product; update FetchConfig and environment variables; enhance alert component; improve product card and checkout pages

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -375,7 +375,7 @@ a:hover .dots-vertical-dots:nth-child(3) {
     @apply flex gap-3 pb-2 justify-between border-b border-borderColor;
 
     .title {
-      @apply text-h5 text-black;
+      @apply text-h5 text-black dark:text-white;
     }
   }
 }
@@ -449,37 +449,6 @@ input[type='checkbox']:not(.form-check-input):focus {
   padding-bottom: 100px !important;
 }
 
-.product-horizontal {
-  width: 100%;
-  border-radius: var(--border-radius);
-  padding: 2rem;
-  background: #fff;
-  display: flex;
-}
-
-.product-horizontal-image {
-  width: 120px;
-  height: 120px;
-  overflow: hidden;
-  display: flex;
-  border: 1px solid var(--border-color);
-  align-items: center;
-  justify-content: center;
-  border-radius: var(--border-radius);
-  flex: none;
-  background: #fff;
-}
-
-.product-horizontal-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.product-horizontal-body {
-  width: 100%;
-  padding-right: 1rem;
-}
 
 button {
   outline: none !important;
