--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -163,7 +163,7 @@ html.dark {
 }
 
 
-.blog-content {
+.blog-content,.single-product-content {
 
 
   ul {
@@ -191,7 +191,7 @@ html.dark {
   p {
     font-weight: normal;
     margin-bottom: .5rem;
-    line-height: 230%;
+    line-height: 150%;
     font-size: 17px;
   }
 
@@ -381,4 +381,19 @@ table {
 
 .input-invalid-text {
   color: red;
+}
+.card-loading {
+  opacity: .4;
+  z-index: 1;
+  position: relative;
+
+  &::after {
+      content: " ";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 3;
+  }
 }
