--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -163,7 +163,8 @@ html.dark {
 }
 
 
-.blog-content,.single-product-content {
+.blog-content,
+.single-product-content {
 
 
   ul {
@@ -232,7 +233,7 @@ main {
 }
 
 .h__toast {
-  @apply dark:bg-secondary dark:text-borderColor ;
+  @apply dark:bg-secondary dark:text-borderColor;
   box-shadow: 0px 10px 36px rgba(15, 15, 16, 0.2) !important;
   background: white !important;
   color: black !important;
@@ -279,23 +280,31 @@ main {
 
 @media screen and (max-width:768px) {
   div.h__toast {
-    margin: 30px auto !important;
-    width: 85% !important;
+    margin: 10px auto !important;
+    width: 95% !important;
     display: flex;
     min-width: unset !important;
-    min-height: 72px !important;
+    min-height: 60px !important;
     margin-bottom: 0 !important;
   }
 
+  .toast__icon {
+    width: 70px !important;
+    svg{
+      width: 15px;
+      height: 20px;
+    }
+  }
+
   .Vue-Toastification__toast-body {
-    padding: 1.5rem 12px !important;
+    padding: 1rem 12px !important;
     font-size: var(--h7-font-size) !important;
   }
 }
 
 /* فایل styles.scss */
 .table-container {
-  @apply relative overflow-x-auto  rounded-lg;
+  @apply relative overflow-x-auto rounded-lg;
 }
 
 table {
@@ -305,7 +314,7 @@ table {
     @apply text-gray-700 bg-lightSecondary dark:bg-secondary dark:text-gray-400;
 
     th {
-      @apply px-6 py-3 font-medium text-gray-900  dark:text-white;
+      @apply px-6 py-3 font-medium text-gray-900 dark:text-white;
     }
   }
 
@@ -316,10 +325,8 @@ table {
 
   tbody {
     tr {
-      @apply  border-b 
-      border-secondary bg-bodyBg
-       dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-lightSecondary;
-      
+      @apply border-b border-secondary bg-bodyBg dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-lightSecondary;
+
     }
   }
 }
@@ -344,7 +351,8 @@ table {
       color: red;
     }
   }
-  &:disabled{
+
+  &:disabled {
     opacity: .4;
     cursor: no-drop;
   }
@@ -382,18 +390,19 @@ table {
 .input-invalid-text {
   color: red;
 }
+
 .card-loading {
   opacity: .4;
   z-index: 1;
   position: relative;
 
   &::after {
-      content: " ";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 3;
+    content: " ";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 3;
   }
 }
